--- a/PhotosUploader/Views/People/Create.cshtml
+++ b/PhotosUploader/Views/People/Create.cshtml
@@ -2,7 +2,7 @@
 
 <h1>Add Person</h1>
 
-<form asp-controller="People" asp-action="Create">
+<form asp-controller="People" asp-action="Create" enctype="multipart/form-data">
 
     <div class="row">
 
@@ -25,6 +25,16 @@
 
             <label asp-for="DateOfBirth"></label>
             <input asp-for="DateOfBirth" class="form-control" />
+
+        </div>
+
+        <div class="form-group col-md-6">
+
+            <label>Files</label>
+            <div class="custom-file">
+                <input asp-for="Files" class="custom-file-input">
+                <label asp-for="Files" class="custom-file-label">Choose file</label>
+            </div>
 
         </div>
 
