--- a/PhotosUploader/Views/Shared/_Layout.cshtml
+++ b/PhotosUploader/Views/Shared/_Layout.cshtml
@@ -19,10 +19,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-controller="People" asp-action="Create">Add Person</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="People" asp-action="Create">Add Person</a>
+                            <a class="nav-link text-dark" asp-controller="Photos" asp-action="Index">Photos List</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Photos" asp-action="Create">Photo Add</a>
                         </li>
                     </ul>
                 </div>
@@ -44,8 +47,6 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
