--- a/PhotosUploader/Views/People/Create.cshtml
+++ b/PhotosUploader/Views/People/Create.cshtml
@@ -28,13 +28,13 @@
 
         </div>
 
+    </div>
+
+    <div class="row">
+
         <div class="form-group col-md-6">
 
-            <label>Files</label>
-            <div class="custom-file">
-                <input asp-for="Files" class="custom-file-input">
-                <label asp-for="Files" class="custom-file-label">Choose file</label>
-            </div>
+            <input asp-for="Files" data-roveuploader>
 
         </div>
 
