--- a/PhotosUploader/wwwroot/css/site.css
+++ b/PhotosUploader/wwwroot/css/site.css
@@ -90,6 +90,11 @@ body {
     width: fit-content;
     margin: 1rem;
     display: inline-block;
+    cursor: default;
+}
+
+.photo-preview-header {
+    background-color: ghostwhite;
 }
 
 .photo-preview img {
