--- a/PhotosUploader/Views/Photos/Create.cshtml
+++ b/PhotosUploader/Views/Photos/Create.cshtml
@@ -8,7 +8,7 @@
 
             <div data-roveuploader>
 
-                <input name="Photos[0].File" type="file">
+                <input name="Photos[0].File" type="file" multiple>
                 <input name="Photos[0].IsPrimary" data-photoupload-isprimary>
                 <input name="Photos[0].Size" data-photoupload-size>
 
