Changed to post ajax

--- a/PhotosUploader/Views/Photos/Create.cshtml
+++ b/PhotosUploader/Views/Photos/Create.cshtml
@@ -18,7 +18,6 @@
 
     </div>
 
-    <button type="submit" class="btn btn-primary">Update Photos</button>
-    <button type="button" class="btn btn-secondary">Upload Ajax</button>
+    <button id="submit-ajax" type="button" class="btn btn-secondary">Upload Ajax</button>
 
 </form>
