Improved spinner things

--- a/PhotosUploader/wwwroot/css/site.css
+++ b/PhotosUploader/wwwroot/css/site.css
@@ -125,4 +125,5 @@ body {
 
     .photo-preview-overlay .photo-preview-spinner {
         color: ghostwhite;
+        background-color: transparent !important;
     }
