Added optional settings

--- a/PhotosUploader/Views/Photos/Create.cshtml
+++ b/PhotosUploader/Views/Photos/Create.cshtml
@@ -6,13 +6,7 @@
 
         <div class="form-group col-md-12">
 
-            <div data-roveuploader>
-
-                <input name="Photos[0].File" type="file" multiple>
-                <input name="Photos[0].IsPrimary" data-photoupload-isprimary>
-                <input name="Photos[0].Size" data-photoupload-size>
-
-            </div>
+            <div data-photouploader></div>
 
         </div>
 
